- Started implementing IMisuseHandler and creating default handling methods for each type of error Commandler may report. - Started making negative test cases which should report default handling methods. - _Lots_ of code clean up in preparation for implementing Overloads again. (this time without constantly breaking it!) - OMG MORE DOCS! \\(^-^)/ Am best doccer :ablobaww: - Removed all custom exceptions and using Java exceptions instead - Added more options to boolean parser for true/false - Deleted AbstractMetaCommand and MetaOverload, Overloads will now also just be MetaCommands right up. - Made all logging/exception messages private static final variables - Created the @Partial annotation (not implemented yet), this should be attached to array parameters if it's not big deal if some of the list parsed fine, but not all - Updated dependencies - Unknown error now occurs on any uncaught exception. - [skip-ci]
We're doing really well. ^-^ I didn't work much today 'cause meh but still achieved a fair bit, project is getting cleaner and better as we go.